<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="preference_name"><xliff:g id="preference">"shared_preferences_cwa"</xliff:g></string>
    <string name="preference_onboarding_completed"><xliff:g id="preference">"preference_onboarding_completed"</xliff:g></string>
    <string name="preference_onboarding_completed_timestamp"><xliff:g id="preference">"preference_onboarding_completed_timestamp"</xliff:g></string>
    <string name="preference_reset_app"><xliff:g id="preference">"preference_reset_app"</xliff:g></string>
    <string name="preference_only_wifi"><xliff:g id="preference">"preference_only_wifi"</xliff:g></string>
    <string name="preference_tracing"><xliff:g id="preference">"preference_tracing"</xliff:g></string>
    <string name="preference_timestamp_diagnosis_keys_fetch"><xliff:g id="preference">"preference_timestamp_diagnosis_keys_fetch"</xliff:g></string>
    <string name="preference_timestamp_manual_diagnosis_keys_retrieval"><xliff:g id="preference">"preference_timestamp_manual_diagnosis_keys_retrieval"</xliff:g></string>
    <string name="preference_string_google_api_token"><xliff:g id="preference">"preference_m_string_google_api_token"</xliff:g></string>
    <string name="preference_notifications_enabled"><xliff:g id="preference">"preference_notifications_enabled"</xliff:g></string>
    <string name="preference_notifications_risk_enabled"><xliff:g id="preference">"preference_notifications_risk_enabled"</xliff:g></string>
    <string name="preference_notifications_test_enabled"><xliff:g id="preference">"preference_notifications_test_enabled"</xliff:g></string>
    <string name="preference_background_job_allowed"><xliff:g id="preference">"preference_background_job_enabled"</xliff:g></string>
    <string name="preference_mobile_data_allowed"><xliff:g id="preference">"preference_mobile_data_enabled"</xliff:g></string>
    <string name="preference_registration_token"><xliff:g id="preference">"preference_registration_token"</xliff:g></string>
    <string name="preference_device_pairing_successful_time"><xliff:g id="preference">"preference_device_pairing_successful_time"</xliff:g></string>
    <string name="preference_initial_tracing_activation_time"><xliff:g id="preference">"preference_initial_tracing_activation_time"</xliff:g></string>
    <string name="preference_initial_result_received_time"><xliff:g id="preference">"preference_initial_result_received_time"</xliff:g></string>
    <string name="preference_risk_level_score"><xliff:g id="preference">"preference_risk_level_score"</xliff:g></string>
    <string name="preference_risk_level_score_successful"><xliff:g id="preference">"preference_risk_level_score_successful"</xliff:g></string>
    <string name="preference_timestamp_risk_level_calculation"><xliff:g id="preference">"preference_timestamp_risk_level_calculation"</xliff:g></string>
    <string name="preference_test_guid"><xliff:g id="preference">"preference_test_guid"</xliff:g></string>
    <string name="preference_is_allowed_to_submit_diagnosis_keys"><xliff:g id="preference">"preference_is_allowed_to_submit_diagnosis_keys"</xliff:g></string>
    <string name="preference_auth_code"><xliff:g id="preference">"preference_auth_code"</xliff:g></string>
    <string name="preference_database_password"><xliff:g id="preference">"preference_database_password"</xliff:g></string>
    <string name="preference_total_non_active_tracing"><xliff:g id="preference">"preference_total_non_active_tracing"</xliff:g></string>
    <string name="preference_last_non_active_tracing_timestamp"><xliff:g id="preference">"preference_last_non_active_tracing_timestamp"</xliff:g></string>
    <string name="preference_number_successful_submissions"><xliff:g id="preference">"preference_number_successful_submissions"</xliff:g></string>
    <string name="preference_teletan"><xliff:g id="preference">"preference_teletan"</xliff:g></string>
    <string name="preference_last_three_hours_from_server"><xliff:g id="preference">"preference_last_three_hours_from_server"</xliff:g></string>
    <string name="preference_polling_test_result_started"><xliff:g id="preference">"preference_polling_test_result_started"</xliff:g></string>
    <string name="preference_test_result_notification"><xliff:g id="preference">"preference_test_result_notification"</xliff:g></string>
    <string name="preference_risk_days_explanation_shown"><xliff:g id="preference">"preference_risk_days_explanation_shown"</xliff:g></string>
    <string name="accessibility_back">"Back"</string>
    <string name="accessibility_next">"Next"</string>
    <string name="accessibility_menu">"Menu"</string>
    <string name="accessibility_close">"Close"</string>
    <string name="accessibility_logo">"Corona-Warn-App"</string>
    <string name="accessibility_button">"Button"</string>
    <string name="menu_help">"Overview"</string>
    <string name="menu_information">"App Information"</string>
    <string name="menu_settings">"Settings"</string>
    <string name="notification_channel_id"><xliff:g id="notification_channel_id">"de.rki.coronawarnapp.notification.exposureNotificationChannelId"</xliff:g></string>
    <string name="notification_id"><xliff:g id="notification_id">"1"</xliff:g></string>
    <string name="notification_name">"Corona-Warn-App"</string>
    <string name="notification_description">"Notifications from the Corona-Warn-App"</string>
    <string name="notification_headline">"Corona-Warn-App"</string>
    <string name="notification_body">"You have new messages from your Corona-Warn-App."</string>
    <string name="update_dialog_title">"Update available"</string>
    <string name="update_dialog_message">"Please note, you can only use the Corona-Warn-App again once you have installed the latest update."</string>
    <string name="update_dialog_button">"Update"</string>
    <string name="risk_card_body_contact">"No exposure up to now"</string>
    <plurals name="risk_card_body_contact_value">
        <item quantity="one">"%1$s exposure"</item>
        <item quantity="other">"%1$s exposures"</item>
        <item quantity="zero">"%1$s exposures"</item>
        <item quantity="two">"%1$s exposures"</item>
        <item quantity="few">"%1$s exposures"</item>
        <item quantity="many">"%1$s exposures"</item>
    </plurals>
    <string name="risk_card_body_saved_days">"Exposure logging was active for %1$s of the past 14 days."</string>
    <string name="risk_card_body_saved_days_full">"Exposure logging permanently active"</string>
    <string name="risk_card_body_not_yet_fetched">"Encounters have not yet been checked."</string>
    <string name="risk_card_body_time_fetched">"Updated: %1$s"</string>
    <string name="risk_card_body_next_update">"Updated daily"</string>
    <string name="risk_card_button_update">"Update"</string>
    <string name="risk_card_button_cooldown">"Update in %1$s"</string>
    <string name="risk_card_button_enable_tracing">"Activate Exposure Logging"</string>
    <string name="risk_card_body_tracing_off">"Activate exposure logging to evaluate your risk status today."</string>
    <string name="risk_card_low_risk_headline">"Low Risk"</string>
    <string name="risk_card_increased_risk_headline">"Higher Risk"</string>
    <plurals name="risk_card_increased_risk_body_contact_last">
        <item quantity="one">"%1$s day since the last encounter"</item>
        <item quantity="other">"%1$s days since the last encounter"</item>
        <item quantity="zero">"%1$s days since the last encounter"</item>
        <item quantity="two">"%1$s days since the last encounter"</item>
        <item quantity="few">"%1$s days since the last encounter"</item>
        <item quantity="many">"%1$s days since the last encounter"</item>
    </plurals>
    <string name="risk_card_unknown_risk_headline">"Unknown Risk"</string>
    <string name="risk_card_unknown_risk_body">"Since you have not activated exposure logging for long enough, we could not calculate your risk of infection."</string>
    <string name="risk_card_no_calculation_possible_headline">"Exposure logging stopped"</string>
    <string name="risk_card_no_calculation_possible_body_saved_risk">"Last exposure logging:"<xliff:g id="line_break">"\n"</xliff:g>"%1$s"</string>
    <string name="risk_card_outdated_risk_headline">"Exposure logging is not possible"</string>
    <string name="risk_card_outdated_risk_body">"Your exposure logging could not be updated for more than 24 hours."</string>
    <string name="risk_card_outdated_manual_risk_body">"Your risk status has not been updated for more than 48 hours. Please update your risk status."</string>
    <string name="risk_card_loading_headline">"Check is running…"</string>
    <string name="risk_card_loading_body">"Current data is being downloaded and checked.\nThis can take several minutes."</string>
    <string name="main_about_headline">"FAQ"</string>
    <string name="main_about_body">"Here you can find answers to frequently asked questions about the Corona-Warn-App. You will be forwarded to an external website."</string>
    <string name="main_about_link">"https://www.bundesregierung.de/corona-warn-app-faq-englisch"</string>
    <string name="hint_external_webpage">"Here you can find answers to frequently asked questions about the Corona-Warn-App. You will be forwarded to an external website."</string>
    <string name="main_share_title">"Share the Corona-Warn-App"</string>
    <string name="main_share_headline">"Let\'s fight coronavirus together"</string>
    <string name="main_share_body">"The more people who use the app, the faster we can break the infection chain. Please invite your family and friends to download the app."</string>
    <string name="main_share_button">"Send Download Link"</string>
    <string name="main_share_message">"Fighting coronavirus together"<xliff:g id="line_break">"\n"</xliff:g>"I\'m in on this, you too?"<xliff:g id="line_break">"\n"</xliff:g><xliff:g id="link_play_store">"https://www.corona-warn-app.de"</xliff:g>"\n"<xliff:g id="line_break">"\n"</xliff:g></string>
    <string name="main_share_illustration_description">"A man shares the Corona-Warn-App with four other persons."</string>
    <string name="main_overview_title">"Overview"</string>
    <string name="main_overview_accessibility_title">"Overview"</string>
    <string name="main_overview_subtitle_tracing">"Exposure Logging"</string>
    <string name="main_overview_body_tracing">"Exposure logging is one of the three central features of the app. When you activate it, encounters with people\'s devices are logged. You don\'t have to do anything else."</string>
    <string name="main_overview_subtitle_risk">"Risk of Infection"</string>
    <string name="submission_intro_button_next">"Next"</string>
    <string name="submission_done_title">"Thank you"</string>
    <string name="submission_done_body">"You have made a valuable contribution. Thanks to your support, other people can now be warned and can react appropriately."</string>
    <string name="submission_done_subtitle">"Please note:"</string>
    <string name="submission_done_further_info_title">"Other information:"</string>
    <string name="submission_done_button_done">"Done"</string>
    <string name="submission_test_request_headline">Get tested</string>
    <string name="submission_test_request_text">Select the date on which you became contagious. This will be communicated to you by the person doing the test.</string>
    <string name="submission_test_request_save_text">Show this number to the person doing the test. Tap "Save" so you can be notified as soon as the test result is available.</string>
    <string name="submission_test_request_save_button_save">Save</string>
</resources>