<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="de.rki.coronawarnapp.util.formatter.FormatterSubmissionHelper" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/submission_test_request_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:accessibilityLiveRegion="assertive"
        android:contentDescription="@string/submission_test_request_headline">

        <include
            android:id="@+id/submission_test_request_header"
            layout="@layout/include_header"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:icon="@{@drawable/ic_back}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/submission_test_request_headline}" />


        <TextView
            android:id="@+id/submission_test_request_text"
            style="@style/subtitle"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:focusable="true"
            android:text="@string/submission_test_request_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_header" />

        <DatePicker
            android:id="@+id/submission_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_text" />


        <Button
            android:id="@+id/submission_test_request_button_next"
            style="@style/buttonPrimary"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/submission_intro_button_next"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/guideline_action" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/guideline_action" />

        <include layout="@layout/merge_guidelines_side" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>