<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="de.rki.coronawarnapp.util.formatter.FormatterSubmissionHelper" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/submission_test_request_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:accessibilityLiveRegion="assertive"
        android:contentDescription="@string/submission_test_request_headline">

        <include
            android:id="@+id/submission_test_request_save_header"
            layout="@layout/include_header"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:icon="@{@drawable/ic_back}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/submission_test_request_headline}" />

        <TextView
            android:id="@+id/submission_test_request_save_date"
            style="@style/subtitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_header"
            tools:text="Jul 31, 2020" />

        <ImageView
            android:id="@+id/submission_test_request_save_qr_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_date" />

        <TextView
            android:id="@+id/submission_test_request_save_code"
            style="@style/headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_qr_image"
            tools:text="64658-91203-67952-49" />

        <TextView
            android:id="@+id/submission_test_request_save_text"
            style="@style/subtitle"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:focusable="true"
            android:text="@string/submission_test_request_save_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_code" />

        <Button
            android:id="@+id/submission_test_request_save_button_save"
            style="@style/buttonPrimary"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/submission_test_request_save_button_save"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/guideline_action" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/guideline_action" />

        <include
            android:id="@+id/include"
            layout="@layout/merge_guidelines_side" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>