<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="de.rki.coronawarnapp.util.formatter.FormatterAccessibilityHelper" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/submission_done_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/submission_done_title"
        android:fillViewport="true"
        tools:context=".ui.submission.SubmissionDoneFragment">

        <include
            android:id="@+id/submission_done_header"
            layout="@layout/include_header"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:icon="@{@drawable/ic_close}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintBottom_toBottomOf="@id/guideline_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submission_done_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <ImageView
                    android:id="@+id/submission_done_hero_illustration"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:contentDescription="@{FormatterAccessibilityHelper.formatImage(@string/submission_done_illustration_description)}"
                    android:focusable="true"
                    android:src="@drawable/ic_submission_illustration_thanks"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/submission_done_headline"
                    style="@style/headline4"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:accessibilityHeading="true"
                    android:focusable="true"
                    android:text="@string/submission_done_title"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/submission_done_hero_illustration" />

                <TextView
                    android:id="@+id/submission_done_text"
                    style="@style/subtitle"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:focusable="true"
                    android:text="@string/submission_done_body"
                    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/submission_done_headline" />

                <TextView
                    android:id="@+id/submission_done_subtitle"
                    style="@style/headline5"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:accessibilityHeading="true"
                    android:focusable="true"
                    android:text="@string/submission_done_subtitle"
                    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/submission_done_text" />

                <LinearLayout
                    android:id="@+id/submission_done_behavior_dynamic"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/submission_done_subtitle">

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/further_info"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSurface2"
                    android:padding="@dimen/spacing_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/submission_done_behavior_dynamic">

                    <TextView
                        android:id="@+id/further_info_title"
                        style="@style/headline5"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:focusable="true"
                        android:text="@string/submission_done_further_info_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/submission_done_further_info_dynamic"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/further_info_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <include layout="@layout/merge_guidelines_side" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/submission_done_button_done"
            style="@style/buttonPrimary"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:text="@string/submission_done_button_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_action" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/guideline_action" />

        <include layout="@layout/merge_guidelines_side" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>